--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ anyhow = "1"
 clap = { version = "4", features = ["derive"] }
 libc = "0.2"
 libsystemd-sys = { version = "0.9.3", default-features = false, features = ["journal"] }
+socket2 = "0.5"
